Deployments/suex-enginfprojects-test/k8s-manifests/deploy-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects
    app.kubernetes.io/component: wsgi-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects
    spec:
      containers:
        - name: mpsproject
          image: quay.io/ds283/mpsproject:2023.2.10
          imagePullPolicy: Always
          resources:
            limits:
              memory: 384Mi
            requests:
              cpu: 100m
              memory: 256Mi         
          ports:
            - containerPort: 5000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          volumeMounts:
            - name: local-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 3
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: local-config
          configMap:
            name: enginfprojects-local
      restartPolicy: Always
