Deployments/suex-enginfprojects-test/k8s-manifests/deploy-celery-dashboard.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects-celery-dashboard
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-celery-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects-celery-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects-celery-dashboard
    spec:
      containers:
        - name: mpsproject
          image: quay.io/ds283/mpsproject:2023.2.5
          imagePullPolicy: Always
          command: ["./launch_flower.sh"]
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          volumeMounts:
            - name: local-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: local-config
          configMap:
            name: enginfprojects-local
      restartPolicy: Always
