Deployments/suex-enginfprojects-test/k8s-manifests/deploy-default-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects-default-worker
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-default-worker
    app.kubernetes.io/component: async-queue
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects-default-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects-default-worker
    spec:
      containers:
        - name: mpsproject
          image: quay.io/ds283/mpsproject:2023.2.14
          imagePullPolicy: Always
          command: ["./launch_celery.sh"]
          resources:
            limits:
              cpu: 500m
              memory: 1280Mi
            requests:
              cpu: 100m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
          volumeMounts:
            - name: instance-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
            - name: instance-config
              mountPath: /mpsproject/app/initdb/initdb.py
              subPath: initdb.py
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: instance-config
          configMap:
            name: enginfprojects-instance
      restartPolicy: Always
