Deployments/suex-enginfprojects-test/k8s-manifests/deploy-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects-mariadb
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfproects-mariadb
    app.kubernetes.io/component: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects-mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "0.2"
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mount-mariadb-data
            - mountPath: /etc/mysql
              name: mount-mariadb-conf
      volumes:
        - name: mount-mariadb-data
          persistentVolumeClaim:
            claimName: enginfprojects-pvc-mariadb-data
        - name: mount-mariadb-conf
          configMap:
            name: enginfprojects-mariadb
            items:
              - key: my.cnf
                path: my.cnf
      restartPolicy: Always
