Deployments/suex-enginfprojects-test/k8s-manifests/deploy-priority-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects-priority-worker
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-priority-worker
    app.kubernetes.io/component: async-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects-priority-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects-priority-worker
    spec:
      containers:
        - name: mpsproject
          image: quay.io/ds283/mpsproject:2023.2.1
          imagePullPolicy: Always
          command: ["./launch_celery.sh"]
          resources:
            limits:
              memory: 1.2Gi
            requests:
              cpu: 200m
              memory: 768Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: local-config
              mountPath: /mpsproject/app/instance/local.py
              subPath: local.py
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: local-config
          configMap:
            name: enginfprojects-local
      restartPolicy: Always
