Deployments/suex-enginfprojects-test/k8s-manifests/deploy-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enginfprojects-redis-master
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-redis-master
    app.kubernetes.io/component: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: enginfprojects-redis-master
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enginfprojects-redis-master
    spec:
      containers:
        - name: redis
          image: dockerhub.vshn.net/library/redis:6.2.6
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /data
              name: mount-redis-data
      volumes:
        - name: mount-redis-data
          persistentVolumeClaim:
            claimName: enginfprojects-pvc-redis-data
      restartPolicy: Always
