Deployments/suex-enginfprojects-test/k8s-manifests/service-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: enginfprojects-mariadb
  namespace: suex-enginfprojects-test
  labels:
    app.kubernetes.io/name: enginfprojects-mariadb
spec:
  selector:
    app.kubernetes.io/name: enginfprojects-mariadb
  type: ClusterIP
  ports:
    - port: 3306
