Deployments/suex-enginfprojects-test/k8s-manifests/ingress-default.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enginfprojects-ingress-default
  namespace: suex-enginfprojects-test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
      - test.enginfprojects.inf.susx.ac.uk
      secretName: enginfprojects-ingress-tls
  rules:
    - host: test.enginfprojects.inf.susx.ac.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enginfprojects
                port:
                  number: 5000
